fix scrollbar showing

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -8,15 +8,19 @@
 	box-sizing: border-box;
 	font-family: $fontMain;
 }
-
 html,
 body {
 	height: 100%;
 	width: 100%;
 	overflow-x: hidden;
-	overflow-y: scroll;
 }
+html {
+}
+
 body {
+	overflow-y: scroll;
+	overflow-x: hidden;
+	// overflow-y: scroll;
 	// overflow-y: scroll;
 }
 
